--- a/cssPractice/position_fix.html
+++ b/cssPractice/position_fix.html
@@ -8,14 +8,14 @@
             position: fixed;
             top: 0;
             bottom: 80%;
-            left: 0;
+            left: 20%;
             right: 0;
             background-color: gray
         }
 
         #sidebar {
             position: fixed;
-            top: 20%;
+            top: 0;
             right: 80%;
             bottom: 0;
             left: 0;
