--- a/profile.html
+++ b/profile.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <style>
-      /*#cat {
-
-        radius: 50%;
-      }*/
+    <style>  
     </style>
   </head>
   <body>
@@ -34,42 +30,18 @@
         </div>
       </div>
     </nav>
-    <div class="container">
-      <div id="middle" class=>
-        <h1>
-          Navbars are responsive meta components that serve as navigation headers for your application or site. They begin
-           collapsed (and are toggleable) in mobile views and become horizontal as the available viewport width increases.
-           Justified navbar nav links are currently not supported.Overflowing contentSince Bootstrap doesn't know how much
-           space the content in your navbar needs, you might run into issues with content wrapping into a second row. To resolve this, you can:
-          Reduce the amount or width of navbar items.
-          Hide certain navbar items at certain screen sizes using responsive utility classes.
-          Change the point at which your navbar switches between collapsed and horizontal mode. Customize the @grid-float-breakpoint variable or add your own media query.
-          Requires JavaScript plugin.If JavaScript is disabled and the viewport is narrow enough that the navbar collapses, it will be impossible to expand the navbar and
-           view the content within the .navbar-collapse.The responsive navbar requires the collapse plugin to be included in your version of Bootstrap.
-           Changing the collapsed mobile navbar breakpoint.The navbar collapses into its vertical mobile view when the viewport is narrower than @grid-float-breakpoint, and
-           expands into its horizontal non-mobile view when the viewport is at least @grid-float-breakpoint in width. Adjust this variable in the Less source to control when
-           the navbar collapses/expands. The default value is 768px (the smallest "small" or "tablet" screen).Make navbars accessible
-          Be sure to use a nav element or, if using a more generic element such as a div, add a role="navigation" to every navbar to explicitly identify it as a landmark region
-          for users of assistive technologies.
-        </h1>
-      </div>
-      <div id="end" style="color: blue">
-        <h1>
-          Navbars are responsive meta components that serve as navigation headers for your application or site. They begin
-           collapsed (and are toggleable) in mobile views and become horizontal as the available viewport width increases.
-           Justified navbar nav links are currently not supported.Overflowing contentSince Bootstrap doesn't know how much
-           space the content in your navbar needs, you might run into issues with content wrapping into a second row. To resolve this, you can:
-          Reduce the amount or width of navbar items.
-          Hide certain navbar items at certain screen sizes using responsive utility classes.
-          Change the point at which your navbar switches between collapsed and horizontal mode. Customize the @grid-float-breakpoint variable or add your own media query.
-          Requires JavaScript plugin.If JavaScript is disabled and the viewport is narrow enough that the navbar collapses, it will be impossible to expand the navbar and
-           view the content within the .navbar-collapse.The responsive navbar requires the collapse plugin to be included in your version of Bootstrap.
-           Changing the collapsed mobile navbar breakpoint.The navbar collapses into its vertical mobile view when the viewport is narrower than @grid-float-breakpoint, and
-           expands into its horizontal non-mobile view when the viewport is at least @grid-float-breakpoint in width. Adjust this variable in the Less source to control when
-           the navbar collapses/expands. The default value is 768px (the smallest "small" or "tablet" screen).Make navbars accessible
-          Be sure to use a nav element or, if using a more generic element such as a div, add a role="navigation" to every navbar to explicitly identify it as a landmark region
-          for users of assistive technologies.
-        </h1>
+    <div class="container-fluid" style="background-color:grey">
+      <div class="row">
+        <div class="col-xs-10 col-xs-offset-1">
+          <div class="col-xs-5 text-center">
+            <h3>A lovely baby</h3>
+          </div>
+          <div class="col-xs-5">
+          <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRKM2SQph1_s-fq6vFH4TNrH-gwHRLicYJBkD6yEBZJYPnwc077" alt="crying baby" class="img-responsive img-circle">
+          </div>
+          <div id="picture" style="background-color:red"></div>
+          <div id="contact" style="background-color:black"></div>
+        </div>
       </div>
     </div>
     <footer>
